--- a/config/database.yml
+++ b/config/database.yml
@@ -28,8 +28,8 @@ development:
   encoding: utf8
   database: photohome_development
   username: root
-  password: t9788886
-  host: 127.0.0.1
+  password: t97888
+  # host: 127.0.0.1
   port: 3306
   secure_auth: false
 
@@ -56,8 +56,8 @@ test: &test
   encoding: utf8
   database: photohome_development
   username: root
-  password: t9788886
-  host: 127.0.0.1
+  password: t97888
+  # host: 127.0.0.1
   port: 3306
   secure_auth: false
 
@@ -66,8 +66,8 @@ production:
   encoding: utf8
   database: photohome_development
   username: root
-  password: t9788886
-  host: 127.0.0.1
+  password: t97888
+  # host: 127.0.0.1
   port: 3306
   secure_auth: false
 
