--- a/config/database.yml
+++ b/config/database.yml
@@ -63,16 +63,28 @@ test: &test
   port: 3306
   secure_auth: false
 
+
 production:
-  adapter: mysql2
-  encoding: utf8
-  database: photohome_development
-  username: root
-  password: t97888
-  # host: 127.0.0.1
-  pool: 25
-  port: 3306
-  secure_auth: false
+   adapter: postgresql
+   encoding: unicode
+   database: photohome_development
+   pool: 25
+   username: vit
+   password: t97888
+   host: localhost
+   port: 5432
+   template: template0
+
+# production:
+#   adapter: mysql2
+#   encoding: utf8
+#   database: photohome_development
+#   username: root
+#   password: t97888
+#   # host: 127.0.0.1
+#   pool: 25
+#   port: 3306
+#   secure_auth: false
 
 cucumber:
   <<: *test
