--- a/config/database.yml
+++ b/config/database.yml
@@ -55,7 +55,7 @@ development:
 test: &test
   adapter: mysql2
   encoding: utf8
-  database: photohome_development
+  database: photohome_test
   username: root
   password: t97888
   # host: 127.0.0.1
