--- a/config/application.yml
+++ b/config/application.yml
@@ -13,3 +13,5 @@ ADMIN_NAME: First User
 ADMIN_EMAIL: user@example.com
 ADMIN_PASSWORD: changeme
 ROLES: [admin, user, VIP]
+AWS_ACCESSS: "hello"
+AWS_SECRET: "hello"
