--- a/config/database.yml
+++ b/config/database.yml
@@ -52,16 +52,11 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test: &test
-  adapter: mysql2
-  encoding: utf8
-  database: photohome_test
-  username: root
-  password: t97888
-  # host: 127.0.0.1
-  pool: 25
-  port: 3306
-  secure_auth: false
+test:
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
 
 
 # production:
