--- a/config/database.yml
+++ b/config/database.yml
@@ -27,8 +27,8 @@ development:
   adapter: mysql2
   encoding: utf8
   database: photohome_development
-  username: <%= ENV['DB_USER_NAME'] %>
-  password: <% ENV['DB_PASSWORD'] %>
+  username: vit 
+  password: t97888 %>
   # host: 127.0.0.1
   pool: 25
   port: 3306
@@ -84,8 +84,8 @@ production:
   adapter: mysql2
   encoding: utf8
   database: photohome_development
-  username: <%= ENV['DB_USER_NAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
+  username: vit %>
+  password: t97888 %>
   # host: 127.0.0.1
   pool: 25
   port: 3306
