--- a/config/database.yml
+++ b/config/database.yml
@@ -27,8 +27,8 @@ development:
   adapter: mysql2
   encoding: utf8
   database: photohome_development
-  username: <%= ENV['DB_USER_NAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
+  username: vit
+  password: t97888
   # host: 127.0.0.1
   pool: 25
   port: 3306
@@ -62,11 +62,11 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+# test:
+#   adapter: sqlite3
+#   database: db/test.sqlite3
+#   pool: 5
+#   timeout: 5000
 
 
 # production:
@@ -80,14 +80,14 @@ test:
 #    port: 5432
 #    template: template0
 
-production:
-  adapter: mysql2
-  encoding: utf8
-  database: photohome_development
-  username: <%= ENV['DB_USER_NAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
-  # host: 127.0.0.1
-  pool: 25
-  port: 3306
-  secure_auth: false
+# production:
+#   adapter: mysql2
+#   encoding: utf8
+#   database: photohome_development
+#   username: vit
+#   password: t97888
+#   # host: 127.0.0.1
+#   pool: 25
+#   port: 3306
+#   secure_auth: false
 
