--- a/config/database.yml
+++ b/config/database.yml
@@ -80,14 +80,14 @@ development:
 #    port: 5432
 #    template: template0
 
-# production:
-#   adapter: mysql2
-#   encoding: utf8
-#   database: photohome_development
-#   username: vit
-#   password: t97888
-#   # host: 127.0.0.1
-#   pool: 25
-#   port: 3306
-#   secure_auth: false
+production:
+  adapter: mysql2
+  encoding: utf8
+  database: photohome_development
+  username: vit
+  password: t97888
+  # host: 127.0.0.1
+  pool: 25
+  port: 3306
+  secure_auth: false
 
